# py-edhd

./: setup.cfg
src/edhd/: __init__.py
test/: test_edhd.py
