[metadata]
name = edhd
version = 0.0.1
author = John Driscoll
author_email = johnoliverdriscoll@gmail.com
description = An implementation of BIP32-Ed25519
license = GPL-3.0-orlater
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnoliverdriscoll/py-edhd
project_urls =
  Bug Tracker = https://github.com/johnoliverdriscoll/py-edhd/issues

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  pynacl

[options.packages.find]
where = src
